<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/topup_header"
        android:layout_gravity="center"/>
    
    <Button 
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:id="@+id/btn_carrier_card"
        android:text="@string/carrier_card"
        android:layout_gravity="center"/>
    
    <Button 
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:id="@+id/btn_sms"
        android:text="@string/sms" 
        android:layout_gravity="center"/>
    
    <Button 
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:id="@+id/btn_banking"
        android:text="@string/internet_banking"
        android:layout_gravity="center"/>
    
    <Button 
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:id="@+id/btn_paypal"
        android:text="@string/paypal"
        android:layout_gravity="center"/>

</LinearLayout>