<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/banking_topup_header"
        android:layout_gravity="center"/>
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/banking_topup_legend"
        android:layout_gravity="center"/>
    
    <EditText 
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/edit_bank_value"
        android:layout_gravity="center"
        android:hint="@string/hint_bank_value"
        android:numeric="decimal"
        android:maxLength="10"/>
    
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
        
        <Button 
	        android:layout_width="100dp"
	        android:layout_height="wrap_content"
	        android:id="@+id/btn_cancel"
	        android:text="@string/back"
	        android:layout_gravity="center_horizontal"/>
        
        <Button 
	        android:layout_width="100dp"
	        android:layout_height="wrap_content"
	        android:id="@+id/btn_banking_charge"
	        android:text="@string/charge"
	        android:layout_gravity="center_horizontal"/>
        
    </LinearLayout>

</LinearLayout>